=== 0.4.0 / 2010-05-24

* Included Semantic Version format (http://semver.org/)
* Parsing conversions can now prescreen or premodify the original format value.
* Expanded the module version detection to include VERSION submodules.
* Some Rakefile fixes to match RDoc and Ruby 1.9 changes.

=== 0.3.0 / 2009-11-30

* Alpha release, opened for public feedback
* Autoloading of format definitions using a load path.
* Format and conversion registry/lookup is now thread-safe.
* Implemented resetting a particular field in the value.
* Implemented aliases for field names.
* Changed the canonical YAML tag to its permanent value. The old one will continue to be recognized, but only the permanent one will be written from now on.
* Documentation updates

=== 0.2.5 / 2009-11-24

* Preserve minimum width of a field, if the field has leading zeros. For example, "2.01".

=== 0.2.4 / 2009-11-19

* Fixed a regression introduced in 0.2.2 where "1.0a" was being recognized as an alpha version rather than a patchlevel of 1, and similar for "1.0b" and "1.0d".

=== 0.2.3 / 2009-11-19

* Recognize "_" and "u" as patchlevel delimiters, to support Sun's Java version numbers (e.g. "1.6.0_17", "6u17").
* Recognize "v" prefix found on some version numbers (e.g. "v1.2")

=== 0.2.2 / 2009-11-18

* Standard format now supports certain kinds of prereleases without a prerelease number. e.g. "1.9.2dev" is interpreted as the same number as "1.9.2dev0".
* Added Versionomy#ruby_version.
* A field can specify a default_value for parsing, distinct from the one specified by the schema.
* A field can specify requires_next_field to control whether the following field is required or optional.

=== 0.2.1 / 2009-11-08

* Added Versionomy#version_of.
* Now lets Blockenspiel set its own VERSION instead of reaching into Blockenspiel's namespace.

=== 0.2.0 / 2009-11-05
